[gd_scene load_steps=2 format=3 uid="uid://bvk36e8nxh5a0"]

[ext_resource type="Script" path="res://player/script/player_menu.gd" id="1_ipna7"]

[node name="PlayerMenu" type="Control" node_paths=PackedStringArray("player_grid")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ipna7")
player_grid = NodePath("MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/PlayerListContainer/PanelContainer/MarginContainer/PlayerListControl/PlayerListGrid")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 350
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 350
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="AddPlayerContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/AddPlayerContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NewPlayer" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/AddPlayerContainer/PanelContainer"]
layout_mode = 2
text = "Add Player"

[node name="PlayerListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/PlayerListContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/PlayerListContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="PlayerListControl" type="Control" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/PlayerListContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayerListGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/PlayerListContainer/PanelContainer/MarginContainer/PlayerListControl"]
layout_mode = 2
offset_right = 1170.0
offset_bottom = 514.0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="BackToMenu" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer3/PanelContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer/AddPlayerContainer/PanelContainer/NewPlayer" to="." method="_on_new_player_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer3/PanelContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
